Enable future-dated posts to publish immediately
- Added future: true to Jekyll config
- Fixes 404 error on Nov 3 and Nov 10 posts
- Posts dated in the future will now build and display
- Allows scheduled content to be visible before publish date

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ baseurl: "/modelitk12-newsletter"
 # Build settings
 markdown: kramdown
 permalink: /:year/:month/:day/:title/
+future: true  # Publish future-dated posts immediately
 
 # Defaults
 defaults:
